--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "TDD",
+  "name": "@cbdallavalle/complete-me",
   "version": "1.0.0",
-  "description": "",
+  "description": "Autocomplete functionality",
   "main": "index.js",
   "directories": {
     "test": "tests"
